# 3DSceneUnderstanding

./: .gitignore  TODO  scenerbm.m
DBN/code/: features_dump  input.py
DeepNetwork/: RunMLP.m  RunMLP_CV.m  StandardizeData.m
DeepNetwork/deeplearn_framework/: LayerBase.m  LayerBernoulliRBM.m  LayerBinaryAutoencoder.m  LayerGaussianRBM.m  LayerLinearAutoencoder.m  MultiLayerPerceptron.m  fineTuneStackedAutoencoder.m  globalPaths.m  lineSearch.m  pretrainBinarySparseAutoencoder.m  pretrainLinearSparseAutoencoder.m  rbm_train_BB_hinton.m  rbm_train_LB_hinton.m  softmaxClassifierTrain.m
SceneSVM/Code/: Dataset.m  ExperimentBase.m  ExperimentHyperParameterSearch.m  SetupReadme.txt  crossvalind.m  globalpaths.m  run.m
SceneSVM/Code/Classifiers/: LinearPerformance.m  MultiClassPerformance.m  Performance.m  predict.mexw64  train.mexw32  train.mexw64
SceneSVM/Code/Code_HyperParameter_Search/: GridSearch.m  Jaakkola.m  LineSearch.m
SceneSVM/Code/Utility/: visualize.m
SceneSVM/Dataset/: home-gaussrbm.mat  home.mat  home_rbm30.mat  load_scene_dataset.m  scenerbm.m  value.mat
dbn/: README
dbn/data/cornell/: README  data_c17_test.txt  data_c17_valid.txt  data_split5_test.txt  data_split5_train.txt  data_split5_valid.txt
dbn/data/data_prepare1/: data_prepare_usedclass.m
dbn/data/data_prepare1/feature_usedclass_home/: data_c17_test.txt  data_c17_train.txt  data_c17_valid.txt
dbn/data/mapped_node_features/: home_mapping.mat  map_home.m  map_office.m  office_raw.mat
dbn/src/: DBN.py  convert_data.py  dbn_features  dbn_features-gaussian  dummy  rbm.py
deepnet_utilities/: StartSceneTask.m  StartSpinHistogramTask.m  StartTest.m  caen.m  create_cross_validated_task.m  dense_data_home_kmeans_unm.mat  dense_data_office_kmeans_unm.mat  external_classifiers_performance.m  find_work.m  generate_read_file_path.m  generate_write_file_path.m  global_paths.m  grid_search.m  histogram.mat  histogram_un.mat  line_search.m  perf_stats.m  read_task_parameters.m  results_summary.m  retrieve_cellstruct_field.m  run_gaussian_hist_svm.m  set_task_parameters.m  stage_external_classify.m  stage_external_classify_raw.m  stage_finetune.m  stage_model_select_pretrain.m  standardize_data.m  update_task_parameters.m
deepnet_utilities/ExternalClassifiers/: predict.mexw32  svmpredict.mexw32  svmpredict.mexw64  svmtrain.mexw32  svmtrain.mexw64
deepnet_utilities/deeplearn_framework/: LayerBernoulliRBM.m  LayerBinaryAutoencoder.m  LayerLinearAutoencoder.m  MlpParameters.m  MultiLayerPerceptron.m  deeplearnGlobalPaths.m  fineTuneStackedAutoencoder.m  mlpPerformance.m  mnistTest.m  pretrainBinarySparseAutoencoder.m  pretrainLinearSparseAutoencoder.m  rbm_train_LB_hinton.m  rbm_train_PB_hinton.m  softmaxClassifierPredict.m  softmaxClassifierTrain.m
features/: data_prepare_usedclass.m
features/mapped_node_features/: home.mat  home_data_nodefeats.txt  map_home.m  map_office.m  office.mat  office_data_nodefeats.txt  office_mapping.mat
features/non_nrmlz/: data_c17_train.txt
features/nrmlz_gaussian/: data_c17_test.txt  data_c17_train.txt  data_c17_valid.txt
features/nrmlz_shift/: data_c17_test.txt  data_c17_train.txt  data_c17_valid.txt
pcl/: pcl_resources.txt
pcl/BoWclassification/: InputFeature.m  README  main.m  myBuildHistograms.m  myCalculateDictionary.m  myCompilePyramid.m  perf_stats.m
pcl/BoWclassification_live/: InputFeature.m  RBMBuildHistograms.m  main_office_live.m
pcl/BoWclassification_live/DBNclassifier/: ClassifyOfficeSpin.m  OfficeSpinRbm400PRBMClassifier.mat  StartSpinHistogramTask.m  TrainAllOfficeSpinRbm400PRBM.m  data_office_rbm_concat_unm.mat  global_paths.m  standardize_data.m
pcl/BoWclassification_live/DBNclassifier/SavedNetworks/: OfficeSpinRbm400PRBM.mat
pcl/BoWclassification_live/DBNclassifier/deeplearn_framework/: LayerBase.m  LayerBernoulliRBM.m  LayerBinaryAutoencoder.m  LayerGaussianRBM.m  LayerLinearAutoencoder.m  LayerPoissonRBM.m  MlpParameters.m  MultiLayerPerceptron.m  crossvalind.m  (+11 more)
pcl/BoWclassification_live/featdata/: live_segments.txt  livefeatextract  livevisualize  result_live_dbn.txt  result_live_rbmsvm.txt
pcl/BoWclassification_live/objectmap/: mapping_office.mat
pcl/BoWclassification_live/rbmdiclearn/: LayerBase.m  LayerGaussianRBM.m  LayerPoissonRBM.m  rbm_train_BB_hinton.m  rbm_train_LB_hinton.m
pcl/BoWclassification_live/results/: result_live_dbn.txt  result_live_rbmsvm.txt
pcl/BoWclassification_live/runall/: final545.sh  live_segments.txt  livefeatextract  livevisualize  result_live_dbn.txt  result_live_rbmsvm.txt
pcl/BoWclassification_live/training/: classifier_kmeans_office.mat  classifier_rbm_office.mat  train_kmeans_office.mat  train_rbm_office.mat
pcl/featextract/: CMakeLists.txt
pcl/featextract/params/: base.prm  current.prm  defaults.prm  friday_april13.prm  quick_current.prm  wed_april18.prm
pcl/featextract/src/: CMakeLists.txt  main.cpp
pcl/featextract/src/core/: FeatDescriptor.cpp  FeatDescriptor.hpp  FeatKeypoint.cpp  FeatKeypoint.hpp  FeatPointCloud.cpp  FeatPointCloud.hpp  FeatSegment.cpp  FeatSegment.hpp  extern.hpp
pcl/kinectgrab/: CMakeLists.txt
pcl/kinectgrab/src/: CMakeLists.txt  main.cpp
pcl/livefeatextract/: CMakeLists.txt
pcl/livefeatextract/params/: current.prm  defaults.prm  final_johnny.prm
pcl/livefeatextract/src/: CMakeLists.txt  main.cpp
pcl/livefeatextract/src/core/: FeatDescriptor.cpp  FeatDescriptor.hpp  FeatPointCloud.cpp  FeatPointCloud.hpp  FeatSegment.cpp  FeatSegment.hpp  extern.hpp
pcl/livefeatextract/src/openni/: FeatOpenNIGrabber.cpp  FeatOpenNIGrabber.hpp
pcl/livevisualize/: CMakeLists.txt
pcl/livevisualize/src/: CMakeLists.txt  main.cpp
pcl/pcdbin2pcdascii/: CMakeLists.txt
pcl/pcdbin2pcdascii/src/: CMakeLists.txt  main.cpp
pcl/spinextract/: CMakeLists.txt  CMakeLists.txt~
pcl/spinextract/data/: partial_cup_model.pcd
pcl/spinextract/src/: CMakeLists.txt  main.cpp
pcl/test/: CMakeLists.txt
pcl/test/src/: CMakeLists.txt  CMakeLists.txt~  main.cpp~  pcd_spin_image.cpp
pcl/visualize/: CMakeLists.txt
pcl/visualize/src/: CMakeLists.txt  main.cpp
(+2282 files in other folders)
