CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

########### Project name ###########
SET(PACKAGE livevisualize)
PROJECT(${PACKAGE})

#FIND_PACKAGE(PCL 1.5 REQUIRED COMPONENTS common io kdtree)
FIND_PACKAGE(PCL 1.5 REQUIRED)

INCLUDE_DIRECTORIES(${PCL_INCLUDE_DIRS})
LINK_DIRECTORIES(${PCL_LIBRARY_DIRS})
ADD_DEFINITIONS(${PCL_DEFINITIONS})

########### Subdirectories ###############
ADD_SUBDIRECTORY(src) 

